Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
 <!-- Write your HTML in this file -->
+<DOCTYPE html>
+<html>
+  <head>
+    <h1> this is the title </h1>
+    <p> this is paragraph one </p>
+    <p> this is paragraph two </p>
+  </head>
+  <body>
+      
+  </body>
+</html>
